# frigate-telegram

./: .env.example  .gitignore  Dockerfile  config.example.yaml  pyproject.toml
.github/workflows/: docker.yml
src/frigate_telegram/: cli.py  config.py  frigate.py  service.py  telegram.py
tests/: test_service.py
