[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frigate-telegram"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
frigate-telegram = "frigate_telegram.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frigate_telegram"]
